# tape-calc

./: .envrc  .gitignore  README.md  install-desktop.sh  meson.build  tape-calc-mime.xml  tape-calc.desktop  uninstall-desktop.sh
src/: calculator_engine.cpp  calculator_engine.h  main.cpp  mainwindow.cpp  mainwindow.h
